[gd_scene load_steps=5 format=1]

[ext_resource path="res://box/box.gd" type="Script" id=1]
[ext_resource path="res://box/box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.0835, 32.1875 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 2.64877, 29.2594 )

[node name="box" type="KinematicBody2D" groups=[ "box" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="left" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -29.3558, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision_left" type="CollisionShape2D" parent="left"]

transform/pos = Vector2( -29.3558, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="right" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 29.4927, 0.19371 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision_right" type="CollisionShape2D" parent="right"]

transform/pos = Vector2( 29.4927, 0.19371 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[connection signal="body_enter" from="left" to="." method="_on_left_body_enter"]

[connection signal="body_exit" from="left" to="." method="_on_left_body_exit"]

[connection signal="body_enter" from="right" to="." method="_on_right_body_enter"]

[connection signal="body_exit" from="right" to="." method="_on_right_body_exit"]


